# thirdparty-zlib

./: .gitignore  CMakeLists.txt  FAQ  Makefile.in  README  README-cmake.md  README.cmake  compress.c  configure  crc32.c  deflate.c  deflate.h  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inftrees.c  inftrees.h  trees.c  uncompr.c  zconf.h  zconf.h.cmakein  zconf.h.in  zlib.3  zlib.h  zlib.map  zlib.pc.cmakein  zlibConfig.cmake.in  zutil.c  zutil.h
.github/workflows/: c-std.yml  cmake.yml  configure.yml  contribs.yml  msys-cygwin.txt  msys-cygwin.yml  others.yml
contrib/: CMakeLists.txt  README.contrib
contrib/ada/: CMakeLists.txt
contrib/ada/cmake/: binder_helper.cmake
contrib/ada/cmake/Modules/: CMakeADAInformation.cmake
contrib/blast/: CMakeLists.txt
contrib/blast/test/: CMakeLists.txt  add_subdirectory_exclude_test.cmake.in  add_subdirectory_test.cmake.in  find_package_no_components_test.cmake.in  find_package_test.cmake.in  find_package_wrong_components_test.cmake.in
contrib/dotzlib/DotZLib/: UnitTests.cs
contrib/gcc_gvmat64/: CMakeLists.txt
contrib/iostream3/: CMakeLists.txt
contrib/iostream3/test/: CMakeLists.txt  add_subdirectory_test.cmake.in  find_package_no_components_test.cmake.in  find_package_test.cmake.in  find_package_wrong_components_test.cmake.in
contrib/minizip/: CMakeLists.txt  Makefile  MiniZip64_info.txt  crypt.h  ioapi.c  ioapi.h  iowin32.c  iowin32.h  miniunz.c  minizip.c  minizipConfig.cmake.in  skipset.h  unzip.c  unzip.h  zip.c  zip.h
contrib/minizip/test/: CMakeLists.txt  add_subdirectory_exclude_test.cmake.in  add_subdirectory_test.cmake.in  find_package_test.cmake.in
contrib/nuget/: nuget.csproj
contrib/puff/: CMakeLists.txt  pufftest.c  tester-cov.cmake  tester.cmake
contrib/puff/test/: CMakeLists.txt
contrib/testzlib/: CMakeLists.txt
contrib/vstudio/: readme.txt
contrib/vstudio/vc17/: zlibvc.def
contrib/vstudio/vc9/: zlibvc.def
contrib/zlib1-dll/: CMakeLists.txt
examples/: zlib_how.html
os400/: bndsrc  make.sh  zlib.inc  zlibfixed.rpgle  zlibfree.inc
test/: CMakeLists.txt  add_subdirectory_exclude_test.cmake.in  add_subdirectory_test.cmake.in  example.c  find_package_test.cmake.in  minigzip.c
win32/: Makefile.gcc  README-WIN32.txt  zlib.def  zlib1.rc
